@@ -11,12 +11,13 @@
 
 char* Sampler::_psName = "Sampler";
 
-Sampler::Sampler()
+Sampler::Sampler(int index)
 {
+	macIndex = index;
 	_numPars=0;
 	_type = MACH_SAMPLER;
 	_mode = MACHMODE_GENERATOR;
-	sprintf(_editName, "Sampler");
+	sprintf(_editName, "%.2X:Sampler",macIndex);
 
 	_resampler.SetQuality(RESAMPLE_LINEAR);
 	for (int i=0; i<SAMPLER_MAX_POLYPHONY; i++)
